refactored the controllabilityPredicate for OrchestrationSynthesisOperator and ChoreographySynthesisOperator
Signed-off-by: Davide Basile <davide.basile@isti.cnr.it>